Add French translations for help and installation steps

--- a/v8/i18n/fr.json
+++ b/v8/i18n/fr.json
@@ -17,4 +17,21 @@
 
   "gps_error": "GPS indisponible ou refusé",
   "compass_denied": "Autorisation boussole refusée"
+  
+  "help_title": "Aide – Pot à Mèche",
+  "help_install": "Installation smartphone",
+  "help_vars": "Explication de l’application",
+  "help_contact": "Contact / retours terrain",
+  "close": "Fermer",
+
+  "install_step_1": "Ouvrir l’application dans le navigateur",
+  "install_step_2": "Menu → Ajouter à l’écran d’accueil",
+  "install_step_3": "Autoriser la localisation GPS",
+  "install_step_4": "Autoriser l’accès à la boussole",
+
+  "vars_1": "Chaque couleur correspond à une station",
+  "vars_2": "Start / Stop : mesure le temps",
+  "vars_3": "Position : relève la localisation GPS",
+  "vars_4": "Boussole : capture la direction"
 }
+
