--- a/v8/i18n/fr.json
+++ b/v8/i18n/fr.json
@@ -49,6 +49,19 @@
   "map_local": "Carte locale",
   "map_send": "Envoi vers carte partagée",
   "map_shared": "Carte partagée (10 km)"
+
+  "map_title": "Localisation du nid",
+  "back": "Retour",
+  "map_legend": "Points d’observation et directions",
+
+  "map_no_data_title": "Aucune donnée exploitable pour la localisation",
+  "map_no_data_1": "saisir une position",
+  "map_no_data_2": "capturer une direction avec la boussole",
+
+  "map_station": "Station",
+  "map_distance": "Distance",
+  "map_direction": "Direction"
 }
+
 
 
