--- a/v8/i18n/en.json
+++ b/v8/i18n/en.json
@@ -15,24 +15,15 @@
   "help_vars": "How the app works",
   "help_contact": "Contact / field feedback",
 
-  "gps_error": "GPS unavailable or denied",
-  "compass_denied": "Compass permission denied"
-
-  "help_title": "Help – Wick Trap",
-  "help_install": "Smartphone installation",
-  "help_vars": "How the app works",
-  "help_contact": "Contact / field feedback",
-  "close": "Close",
-
   "install_step_1": "Open the app in your browser",
   "install_step_2": "Menu → Add to home screen",
-  "install_step_3": "Allow GPS location access",
+  "install_step_3": "Allow GPS access",
   "install_step_4": "Allow compass access",
 
   "vars_1": "Each color represents one station",
   "vars_2": "Start / Stop: measures time",
   "vars_3": "Position: records GPS location",
-  "vars_4": "Compass: captures direction"
+  "vars_4": "Compass: captures direction",
 
   "gps_error": "GPS unavailable or denied",
   "compass_denied": "Compass permission denied",
@@ -48,7 +39,7 @@
 
   "map_local": "Local map",
   "map_send": "Send to shared map",
-  "map_shared": "Shared map (10 km)"
+  "map_shared": "Shared map (10 km)",
 
   "map_title": "Nest location",
   "back": "Back",
@@ -56,12 +47,9 @@
 
   "map_no_data_title": "No usable data for map display",
   "map_no_data_1": "record a position",
-  "map_no_data_2": "capture a direction using the compass",
+  "map_no_data_2": "capture a direction with the compass",
 
   "map_station": "Station",
   "map_distance": "Distance",
   "map_direction": "Direction"
 }
-
-
-
