--- a/v8/i18n/de.json
+++ b/v8/i18n/de.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "Dochtfalle",
+  "app_title": "Locktopf",
   "help": "Hilfe",
   "start": "Start / Stopp",
   "reset": "Zurücksetzen",
