--- a/v8/i18n/en.json
+++ b/v8/i18n/en.json
@@ -1,12 +1,14 @@
 {
   "app_title": "Wick Trap",
   "help": "Help",
+
   "start": "Start / Stop",
   "reset": "Reset",
   "position": "Position",
   "compass": "Compass",
   "detail": "Details",
   "capture": "Screenshot",
+
   "nest_location": "Nest location",
   "close": "Close",
 
@@ -21,7 +23,7 @@
   "install_step_4": "Allow compass access",
 
   "vars_1": "Each color represents one station",
-  "vars_2": "Start / Stop: measures time",
+  "vars_2": "Start / Stop: measures elapsed time",
   "vars_3": "Position: records GPS location",
   "vars_4": "Compass: captures direction",
 
@@ -39,15 +41,15 @@
 
   "map_local": "Local map",
   "map_send": "Send to shared map",
-  "map_shared": "Shared map (10 km)",
+  "map_shared": "Shared map",
 
   "map_title": "Nest location",
   "back": "Back",
   "map_legend": "Observation points and directions",
 
   "map_no_data_title": "No usable data for map display",
-  "map_no_data_1": "record a position",
-  "map_no_data_2": "capture a direction with the compass",
+  "map_no_data_1": "Record a position",
+  "map_no_data_2": "Capture a direction with the compass",
 
   "map_station": "Station",
   "map_distance": "Distance",
