--- a/v8/i18n/fr.json
+++ b/v8/i18n/fr.json
@@ -1,53 +1,61 @@
 {
-  "app_title": "Pot à Mèche",
+  "app_title": "Pot à mèche",
   "help": "Aide",
+
   "start": "Start / Stop",
   "reset": "Reset",
   "position": "Position",
   "compass": "Boussole",
   "detail": "Détail",
   "capture": "Capture d’écran",
+
   "nest_location": "Localisation du nid",
   "close": "Fermer",
 
-  "help_title": "Aide – Pot à Mèche",
-  "help_install": "Installation smartphone",
-  "help_vars": "Explication de l’application",
+  /* ===== AIDE ===== */
+  "help_title": "Aide – Pot à mèche",
+  "help_install": "Installation sur smartphone",
+  "help_vars": "Fonctionnement de l’application",
   "help_contact": "Contact / retours terrain",
 
+  /* ===== INSTALLATION ===== */
   "install_step_1": "Ouvrir l’application dans le navigateur",
   "install_step_2": "Menu → Ajouter à l’écran d’accueil",
-  "install_step_3": "Autoriser la localisation GPS",
+  "install_step_3": "Autoriser l’accès au GPS",
   "install_step_4": "Autoriser l’accès à la boussole",
 
+  /* ===== VARIABLES ===== */
   "vars_1": "Chaque couleur correspond à une station",
   "vars_2": "Start / Stop : mesure le temps",
-  "vars_3": "Position : relève la localisation GPS",
-  "vars_4": "Boussole : capture la direction",
+  "vars_3": "Position : enregistre la position GPS",
+  "vars_4": "Boussole : enregistre la direction",
 
+  /* ===== GPS / BOUSSOLE ===== */
   "gps_error": "GPS indisponible ou refusé",
-  "compass_denied": "Autorisation boussole refusée",
+  "compass_denied": "Accès à la boussole refusé",
 
   "compass_title": "Boussole",
   "compass_enable": "Activer la boussole",
-  "compass_save": "Capturer direction",
+  "compass_save": "Enregistrer la direction",
 
+  /* ===== DÉTAIL ===== */
   "detail_title": "Détail",
   "try": "Essai",
   "delete": "Supprimer",
   "directions": "Directions",
 
+  /* ===== CARTE ===== */
   "map_local": "Carte locale",
-  "map_send": "Envoi vers carte partagée",
-  "map_shared": "Carte partagée (10 km)",
+  "map_send": "Envoyer vers la carte partagée",
+  "map_shared": "Carte partagée",
 
   "map_title": "Localisation du nid",
   "back": "Retour",
   "map_legend": "Points d’observation et directions",
 
-  "map_no_data_title": "Aucune donnée exploitable pour la localisation",
-  "map_no_data_1": "saisir une position",
-  "map_no_data_2": "capturer une direction avec la boussole",
+  "map_no_data_title": "Aucune donnée exploitable pour la carte",
+  "map_no_data_1": "Enregistrer une position",
+  "map_no_data_2": "Enregistrer une direction avec la boussole",
 
   "map_station": "Station",
   "map_distance": "Distance",
