--- a/v8/i18n/nl.json
+++ b/v8/i18n/nl.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "Lontpot",
+  "app_title": "Jacht op de aziatische hoornaar",
   "help": "Hulp",
   "start": "Start / Stop",
   "reset": "Reset",
