--- a/v8/i18n/fr.json
+++ b/v8/i18n/fr.json
@@ -13,6 +13,8 @@
   "close": "Fermer",
 
   "help_title": "Aide – Pot à mèche",
+  "app_subtitle": "Chronos + Direction",
+
   "help_install": "Installation sur smartphone",
   "help_vars": "Fonctionnement de l’application",
   "help_contact": "Contact / retours terrain",
