--- a/v8/i18n/en.json
+++ b/v8/i18n/en.json
@@ -13,6 +13,8 @@
   "close": "Close",
 
   "help_title": "Help – Wick Trap",
+  "app_subtitle": "Timers + Direction",
+
   "help_install": "Smartphone installation",
   "help_vars": "How the app works",
   "help_contact": "Contact / field feedback",
