--- a/v8/i18n/es.json
+++ b/v8/i18n/es.json
@@ -10,6 +10,7 @@
   "nest_location": "Localización del nido",
   "close": "Cerrar",
   "help_title": "Ayuda – Trampa de mecha",
+  "app_subtitle": "Cronómetros + Dirección",
   "help_install": "Instalación en el smartphone",
   "help_vars": "Funcionamiento de la aplicación",
   "help_contact": "Contacto / comentarios de campo",
