--- a/v8/i18n/de.json
+++ b/v8/i18n/de.json
@@ -12,6 +12,8 @@
   "close": "Schließen",
 
   "help_title": "Hilfe – Locktopf",
+  "app_subtitle": "Chronos + Richtung",
+
   "help_install": "Installation auf dem Smartphone",
   "help_vars": "Funktionsweise der App",
   "help_contact": "Kontakt / Rückmeldungen aus dem Feld",
