--- a/v8/i18n/it.json
+++ b/v8/i18n/it.json
@@ -10,6 +10,7 @@
   "nest_location": "Localizzazione del nido",
   "close": "Chiudi",
   "help_title": "Aiuto – Trappola a stoppino",
+  "app_subtitle": "Cronometri + Direzione",
   "help_install": "Installazione su smartphone",
   "help_vars": "Funzionamento dell’applicazione",
   "help_contact": "Contatto / feedback dal campo",
