--- a/v8/i18n/nl.json
+++ b/v8/i18n/nl.json
@@ -9,7 +9,8 @@
   "capture": "Schermafbeelding",
   "nest_location": "Nestlocatie",
   "close": "Sluiten",
-  "help_title": "Hulp – Lontpot",
+  "help_title": "Jacht op de aziatische hoornaar",
+  "app_subtitle": "Chrono's + Richting",
   "help_install": "Installatie op smartphone",
   "help_vars": "Werking van de applicatie",
   "help_contact": "Contact / feedback uit het veld",
