--- a/v8/i18n/bz.json
+++ b/v8/i18n/bz.json
@@ -1,5 +1,7 @@
 {
   "app_title": "Pod gwialenn",
+  "app_subtitle": "Kronometr + Roud",
+
   "help": "Sikour",
   "start": "Loc’hañ / Arsaviñ",
   "reset": "Adderaouekaat",
