--- a/v8/i18n/ik.json
+++ b/v8/i18n/ik.json
@@ -1,5 +1,6 @@
 {
   "app_title": "Metxa-ontzia",
+  "app_subtitle": "Kronometroak + Norabidea",
   "help": "Laguntza",
   "start": "Hasi / Gelditu",
   "reset": "Berrezarri",
